--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -10,9 +10,6 @@ body {
 
 #app {
     width: 100%;
-    height: 100%;
-/*    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;*/
+    height: fit-content;
+
 }
